# dp-100

./: .gitignore  Observation.md  README.md  config.json  create_compute_cluster_sdkv2.ipynb  create_environment_sdkv2.ipynb  create_manage_data_asset_sdkv2.ipynb  create_manage_datastore_sdkv2.ipynb  create_pipeline.ipynb  create_pipeline_titanic.ipynb  create_workspace.ipynb  create_workspace_sdkv2.ipynb  diabetes_e2e.ipynb  env_template.txt  mltest.ipynb  python.env  requirements.txt  run_pytorch_on_cluster_sdkv2.ipynb  run_script_on_cluster_sdkv2.ipynb  setup.cfg  titanic_e2e.ipynb
.azureml/: config.json
archive/: components.py  train.py
conda_yamls/: diabetes-env.yaml  dp-100-env.yaml  dp100-env.yaml  environment.yaml  pip_dependencies.txt  pytorch-env.yaml  titanic-env.yaml
diabetes/: diabetes_e2e.ipynb  diabetes_setup.ipynb  invoke_endpoint.py  train.py
diabetes/models/diabetes_classification_model_2/: MLmodel  conda.yaml  model.pkl  python_env.yaml  requirements.txt
diabetes/src/: train_mlflow_autolog.py  train_mlflow_autolog_sweep_acc.py  train_mlflow_log_model.py  train_mlflow_sweep_acc.py
dp100/: train.py
dp100/src/: utilities.py
src/: hello.py  model.py
src/components/: data_prep.py  train.py
