[metadata]
name = dp100
version = 1.0
author = Joshua Le
author_email = phuonglevu3112@gmail.com
description = DP-100 Exam Preparation
long_description = file: README.md
long_description_content_type = text/markdown
url = yourprojecturl.com
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE.txt

[options]
packages = find:

[options.packages.find]
include = dp100